Working on BudgetOverview.scss

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -20,7 +20,7 @@ nav {
     display: flex;
     min-height: 3.25rem;
     width: 100%;
-
+z
     &_appName {
       font-size: 175%;
       line-height: 1.5;
