--- a/src/App.scss
+++ b/src/App.scss
@@ -3,5 +3,12 @@
   padding: 0;
   outline: none;
   box-sizing: border-box;
-  font-family: 'Comfortaa', cursive;
+}
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1rem;
 }
