--- a/src/App.scss
+++ b/src/App.scss
@@ -11,4 +11,6 @@ html {
 body {
   font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
 }
