--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
   text-align: center!important;
   padding: 0.5rem;
   background-color: #363636;
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
