--- a/src/components/BudgetForm/BudgetForm.scss
+++ b/src/components/BudgetForm/BudgetForm.scss
@@ -1,4 +1,4 @@
-.button {
+.button.open {
   background-color: #209cee;
   color: #fff;
   position: fixed;
@@ -9,4 +9,6 @@
   display: inline-flex;
   font-size: 1rem;
   padding: calc(0.375em - 1px) calc(0.625em - 1px);
+  cursor: pointer;
 }
+
