--- a/src/components/BudgetOverview/BudgetOverview.scss
+++ b/src/components/BudgetOverview/BudgetOverview.scss
@@ -1,8 +1,8 @@
 .section {
-  padding: 3rem 1.5rem;
   display: block;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
+  margin: 3rem 1.5rem 3rem 2rem;
 }
 
 .overview {
@@ -12,6 +12,12 @@
     font-size: 2rem;
     font-weight: 600;
     line-height: 1.125;
+    text-align: center;
+
+    @media (min-width: 900px) {
+      margin-left: 15rem;
+      text-align: left;
+    }
   }
 
   &_subtitle {
@@ -20,11 +26,18 @@
     font-weight: 400;
     line-height: 1.25;
     word-break: break-word;
+    text-align: center;
+
+    @media (min-width: 900px) {
+      margin-left: 15rem;
+      text-align: left;
+    }
   }
 
   &_container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     @media (min-width: 900px) {
       flex-direction: row;
@@ -53,6 +66,7 @@
         text-align: center;
         padding: 1em 0;
 
+
         @media (min-width: 900px) {
           grid-area: moneyLeft;
         }
@@ -68,6 +82,7 @@
 
       &_totalIncome {
         color: #23d160;
+        text-align: center;
         padding: 1em 0;
 
         @media (min-width: 900px) {
@@ -86,6 +101,7 @@
       &_totalExpense {
         color: #ff3860;
         padding: 1em 0;
+        text-align: center;
 
         @media (min-width: 900px) {
           grid-area: totalExpense;
@@ -105,7 +121,7 @@
       width: 100%;
 
       @media (min-width: 900px) {
-        width: 50%;
+        width: 40%;
       }
     }
   }
