--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -28,6 +28,11 @@ nav {
       position: relative;
       cursor: pointer;
       text-decoration: none;
+      margin-left: 0rem;
+
+      @media (min-width: 900px) {
+        margin-left: 15rem;
+      }
     }
 
     &_button {
@@ -46,6 +51,11 @@ nav {
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-right: 0rem;
+
+      @media (min-width: 900px) {
+        margin-right: 15rem;
+      }
 
       &_github_icon {
         background-color: #f5f5f5;
